--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <img src="rocky.png" class="img">
     <img src="Marble_pattern_006.jpg" class="img">
     <div id="box"></div>
-
-
+    <div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
 
 
     
