--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="contextmenu.css" rel="stylesheet">
 </head>
 <body>
-    <button onclick="console.log('test')">tes123123t</button>
+    <button onclick="t = (t + 1) % 4">tes123123t</button>
     <p>test</p>
     <img src="rocky.png" class="img">
     <img src="Marble_pattern_006.jpg" class="img">
