--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="contextmenu.js"></script>
 </head>
 <body>
+    <!-- This document is unneeded, its just for demonstrations-->
     <button onclick="t = (t + 1) % 4">tes123123t</button>
     <p>test</p>
     <img src="rocky.png" class="img">
